tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_22.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (- (((- x) * (+ 1223)) - (- (x + 1223))));
               q := ((((2 * y) * (- 2)) DIV ((z - 0) + (2 + 1223))) < ((+ (- x)) - ((0 MOD x) - (- z))));
               q := ((((- 1223) DIV (200 + y)) DIV ((+ y) MOD (- 1223))) < (((1223 DIV 1) DIV (2 + z)) - ((x DIV 2) - (200 + z))));
               p := ((((0 DIV z) * (1 - 2)) * ((1 * 200) DIV (+ 200))) <= (((+ y) - (x * 200)) DIV ((y MOD x) DIV (+ z))));
               q := (((+ (y * x)) MOD (- (200 MOD 1223))) >= (((z * x) DIV (- z)) * ((- 1223) + (- y))));
  (* error *)  q := ((((+ r) DIV (y * 2)) MOD ((z DIV 1223) * (+ 2))) = (((+ 1) DIV (1223 * x)) * (- (1 DIV 1223))));
               p := (~ (((y MOD 2) <= (1 MOD y)) & ((x MOD 1) < (1223 - x))));
               r := ((- ((1223 * y) DIV (- z))) <= ((- (+ y)) MOD ((0 * z) + (200 + 1223))));
               r := (((- (200 DIV 0)) + ((2 DIV 1) DIV (2 DIV 0))) > (- ((y DIV 1223) - (y DIV 0))));
               q := (((- (1 MOD 1)) # ((200 - y) * (- 2))) & (((- 1223) * (+ y)) <= ((x MOD 1223) + (y DIV 2))))
END Test16.